# BlvckshellOS

./: .env.example  .gitignore  Procfile  README.md  conftest.py  pyproject.toml  render.yaml
brains/: __init__.py  catalog.py
brains/_base/: __init__.py  brain.py  tools.py  worker.py
brains/blvckbot/: __init__.py  brain.py  build.py  ops.py  proposal.py  research.py
brains/capital/: __init__.py  brain.py
brains/ckos/: __init__.py  brain.py  prompts.py  tools.py
brains/commander/: __init__.py  brain.py
brains/examples/: capital.py  commander.py  venture.py
brains/venture/: __init__.py  brain.py
docker/: Dockerfile.brain  Dockerfile.harness  docker-compose.yml  supabase_schema.sql
docs/: architecture.md  brain_sdk.md  deployment.md  dev_handoff.md  file_reference.md  message_protocol.md  system_graph.md  v2_incorporation_audit.md  workflows.md
docs/archive/: BLVCKSHELL_COGNITIVE_CONSTITUTION.md  BLVCKSHELL_EXPERIMENT_LEDGER.md  BLVCKSHELL_FAILURE_ARCHIVE.md  BLVCKSHELL_JUDGMENT_ENGINE_RESEARCH.md  BLVCKSHELL_JUDGMENT_THEORY.md  BLVCKSHELL_OS_V2_ARCHITECTURE_BIBLE.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/doctrine/: page.tsx
frontend/app/intake/: page.tsx
frontend/app/judgments/: page.tsx
frontend/app/leads/: page.tsx
frontend/app/ledger/: page.tsx
frontend/app/memory/: page.tsx
frontend/app/observer/: page.tsx
frontend/app/pipeline/: page.tsx
frontend/app/pipelines/: page.tsx
frontend/components/: BlvckbotCore.tsx  BlvckbotHome.tsx  BrainColumn.tsx  BrainOrb.tsx  ChatPanel.tsx  ChatTranscript.tsx  CommandCenter.tsx  DelegationBeam.tsx  JudgmentActivityFeed.tsx  MediaAttach.tsx  Nav.tsx  PageHeader.tsx  ParticleField.tsx  SideNav.tsx  VoiceInput.tsx  VoiceWaveform.tsx  ui.tsx
frontend/lib/: api.ts  judgmentEvents.ts  observerStream.ts  speechPulse.ts  types.ts
harness/: __init__.py  bootstrap.py  config.py  logging_config.py
harness/api/: __init__.py  errors.py  main.py
harness/core/: __init__.py  agent_loop.py  brain_loader.py  embeddings.py  errors.py  harness.py  inference.py  llm.py  logging.py  memory.py  message_bus.py  observer.py  orchestrator.py  orchestrator_prompts.py  persistence.py  reflection.py  registry.py  router.py  runtime.py
harness/schemas/: __init__.py  audit.py  brain.py  brain_info.py  chat.py  conversation.py  event.py  judgment.py  memory.py  message.py  objective.py  result.py  task.py
harness/tests/: test_agent_loop.py  test_memory.py  test_message_bus.py  test_observer.py  test_registry.py  test_schemas.py
intake/: __init__.py  api.py  service.py  text.py  voice.py
integrations/: __init__.py  upwork_client.py
judgment/: __init__.py  evidence.py  lifecycle.py  outcome.py  profile.py  traces.py
judgment/guards/: __init__.py  harm_aware.py  human_gate.py  safe_divergence.py  tension.py
judgment/reasoning/: __init__.py  case_retrieval.py
judgment/stages/: __init__.py  confidence.py  exploration.py  learning.py
memory/: __init__.py  context_store.py  conversation_store.py  doctrine_store.py  episodic_store.py  judgment_ledger.py  notes_store.py  opinions_store.py
scripts/: __init__.py  register_brain.py  run_brain.py  run_local.sh  schema.sql  seed_db.py  verify_web_search.py
tests/: conftest.py  test_agent_loop_tools.py  test_api.py  test_blvckbot.py  test_brain_tools.py  test_brains.py  test_build_brain.py  test_chat_attachments.py  test_ckos.py  test_conversation_store.py  test_dynamic_loading.py  test_error_reporting.py  test_hierarchy.py  test_inference.py  test_intake.py  test_llm_routing.py  test_memory.py  test_memory_edges.py  test_message_bus.py  test_observer.py  test_ops_brain.py  test_orchestrator.py  test_orchestrator_isolation.py  test_pipeline_e2e.py  test_proposal_brain.py  test_rate_limiter.py  test_redis_backends.py  test_registry.py  test_research_brain.py  test_router.py  test_schemas.py  test_sub_agent.py  test_supabase_backends.py  test_upwork_client.py
tests/judgment/: test_case_retrieval.py  test_confidence.py  test_evidence.py  test_exploration.py  test_guards.py  test_learning.py  test_lifecycle.py  test_outcome_capture.py
tests/simulation/: gates.py  paired_runner.py  test_case_retrieval_gate.py  test_exploration_gate.py  test_foundation_gate.py
tests/simulation/federation/: archetypes.py
