[tool.poetry]
name = "blvckshell"
version = "0.1.0"
description = "Blvckshell Agent Harness — a personal AI operating system that orchestrates a federation of specialized AI brains."
authors = ["Blvckshell Operator"]
readme = "README.md"
license = "Proprietary"
packages = [
    { include = "harness" },
    { include = "brains" },
    { include = "memory" },
    { include = "intake" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
redis = "^5.1.0"
httpx = "^0.27.0"
anthropic = "^0.39.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.12"

[tool.poetry.group.supabase]
optional = true

[tool.poetry.group.supabase.dependencies]
supabase = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"

[tool.poetry.scripts]
blvckshell-harness = "harness.api.main:run"
blvckshell-seed = "scripts.seed_db:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["harness", "brains", "memory", "intake", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "ANN", "D"]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "ANN401", # allow typing.Any where deliberately used
    "ANN101", # deprecated: annotating self is unnecessary
    "ANN102", # deprecated: annotating cls is unnecessary
    "ASYNC109", # explicit timeout params are an intentional API choice
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D", "ANN", "S101"]
"tests/**" = ["D", "ANN", "S101"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "harness/tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["harness", "brains", "memory", "intake"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
